# libdokuwiki

./: .gitignore  CMakeLists.txt  README.md
include/: dokuwiki.h
source/: dokuwiki.cpp  dokuwiki.impl.cpp  dokuwiki.impl.h
